# FtxGateway

./: CMakeLists.txt  README.md  main.cpp
FtxGateway/: CMakeLists.txt
FtxGateway/inc/: FtxAPI.h  FtxWebSocket.h  FtxWebSocketMessages.h  Gateway.h  HmacSha256.hpp
FtxGateway/src/: FtxAPI.cpp  FtxWebSocket.cpp  Gateway.cpp
